libmeegotouch (0.20.65~1) unstable; urgency=low

  * unreleased

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 08 Dec 2010 15:56:30 +0200

libmeegotouch (0.20.64-1) unstable; urgency=low

  * New version
  * Fixes: NB#204882 - Prestarted applications not visible in the switcher after launching it more than once
  * Fixes: NB#199156 - inexplicit libmeegotouchcore dependency on libXfixes; fails to compile under Ubuntu Mint
  * Fixes: Repaint only visible part of MTextEdit
  * Fixes: NB#209140 - Unnecessary floating label displayed when taping in fast scroll area
  * Fixes: NB#199685 - Tab-switching is sluggish - actions react on button-release

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Mon, 08 Dec 2010 15:36:15 +0000

libmeegotouch (0.20.63-1) unstable; urgency=low

  * New version
  * Fixes: NB#206822 - application crashes when it is minimized
  * Fixes: NB#202160 - Spinner is not visible when In Application Menu Selected.
  * Fixes: Text magnifier is initially shown at wrong position.
  * Fixes: NB#204938 - List view private is destroyed while the event loop is processed.
  * Fixes: NB#208580 - Widgetsgallery: tool bar page shows content with wrong borders
  * Fixes: NB#201472 - ImageResource: Failed to save cache file for.... appears too often in console and makes it unusable
  * Fixes: ut_mtoolbar (random) bus error
  * Fixes: NB#206357, Calling MLocale::formatDateTime() takes over 7msec

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Fri, 03 Dec 2010 17:46:37 +0000

libmeegotouch (0.20.62-1) unstable; urgency=low

  * New version 
  * Changes: MeeGo Graphics System Disabled
  * Fixes: NB#206766, All Chinese language names should be distinguishable
  * Fixes: NB#208559 - ut_mtheme fails
  * Fixes: NB#196347 - (appmenu_no_button) MApplicationMenu: the MButton is not added to the menu if it has been shown previously
  * Fixes: NB#205990 - MWidgetAction - calling setWidget() AFTER adding action to the toolbar causes a crash.