@@ -3,6 +3,11 @@ include(../common_mextensions.pri)
 
 QT += network xml
 
+contains(DEFINES, HAVE_CONTEXTSUBSCRIBER) {
+    CONFIG += link_pkgconfig
+    PKGCONFIG += contextsubscriber-1.0
+}
+
 SOURCES += ut_mextensionrunner.cpp \
     $$MSRCDIR/extensions/applicationextension/mextensionrunner.cpp \
     ../stubs/stubbase.cpp
